force-app/main/default/objects/x7s_qstn__Questionnaire__c/x7s_qstn__Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Questionnaire</label>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>