force-app/main/default/objects/x7s_qstn__Questionnaire__c/fields/x7s_qstn__Active__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This questionnaire will only display in the flow if it is marked as active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>