force-app/main/default/objects/x7s_qstn__Questionnaire__c/fields/x7s_qstn__Description__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Description__c</fullName>
    <inlineHelpText>Provide a user-facing description of the questionnaire that explains its purpose.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>