force-app/main/default/objects/x7s_qstn__Questionnaire__c/fields/x7s_qstn__Header_Image__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Header_Image__c</fullName>
    <inlineHelpText>Enter the name of an image-based static resource here to use it as the header of your flow.</inlineHelpText>
    <label>Header Image</label>
    <length>250</length>
    <type>Text</type>
</CustomField>