force-app/main/default/objects/x7s_qstn__Questionnaire__c/fields/x7s_qstn__Success_Text__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Success_Text__c</fullName>
    <inlineHelpText>Enter the text to be displayed upon successful completion of the questionnaire.</inlineHelpText>
    <label>Success Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>