force-app/main/default/objects/x7s_qstn__Questionnaire__c/fields/x7s_qstn__Type__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Type__c</fullName>
    <inlineHelpText>Enter the type of the questionnaire. This will allow you to created filtered lists of questionnaires to present to users.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>