force-app/main/default/objects/x7s_qstn__Questionnaire__c/listViews/x7s_qstn__All.listView-meta.xml
<ListView>
    <fullName>x7s_qstn__All</fullName>
    <columns>NAME</columns>
    <columns>x7s_qstn__Active__c</columns>
    <columns>x7s_qstn__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>